--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "pinyin-pro": "^3.26.0",
-    "@remixicon/react": "^4.2.0",
+    "@fontsource/noto-sans-sc": "^5.0.19",
     "@fontsource/space-grotesk": "^5.0.18",
-    "@fontsource/noto-sans-sc": "^5.0.19"
+    "@remixicon/react": "^4.2.0",
+    "lunar-javascript": "^1.7.7",
+    "pinyin-pro": "^3.26.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.4.2",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.4.2"
   }
 }
